link_libraries(leveldb_test leveldb)

add_executable(autocompact_test autocompact_test.cc)
add_executable(c_test c_test.c)
add_executable(corruption_test corruption_test.cc)
add_executable(db_bench db_bench.cc)
add_executable(db_test db_test.cc)
add_executable(dbformat_test dbformat_test.cc)
add_executable(fault_injection_test fault_injection_test.cc)
add_executable(filename_test filename_test.cc)
add_executable(leveldbutil leveldbutil.cc)
add_executable(log_test log_test.cc)
add_executable(recovery_test recovery_test.cc)
add_executable(skiplist_test skiplist_test.cc)
add_executable(version_edit_test version_edit_test.cc)
add_executable(version_set_test version_set_test.cc)
add_executable(write_batch_test write_batch_test.cc)